Icon alignment correction close #445

--- a/modules/admin/resources/scss/components/_btn.scss
+++ b/modules/admin/resources/scss/components/_btn.scss
@@ -17,3 +17,11 @@
 .btn--bold {
 	font-weight: 500;
 }
+.btn:not(.btn-floating) {
+    i {
+        font-size: 24px; 
+        line-height: 1; 
+        position: relative;
+        top: 6px;
+    }
+}
